# gmp_pro

./: .clang-format  .gitignore  .gitmodules  NOTICE  README.md  README_CN.md  configure_gmp_proxy.bat  deploy_gmp_env.bat  gmp_env.bat  gmp_vs.bat  install_gmp.bat  install_gmp_virtual_env.bat  readme.md  repair_gmp_vcpkg.bat  upgrade_gmp.bat
.agents/skills/maintain-gmp-repository/: SKILL.md
cctl/: readme.md  readme_cn.md
cctl/circuit_solver/: CASE8.CIR  mna_cir_solver.py  mna_utils.py  mna_writer.py
cctl/numerical_solver/: readme.md  readme_cn.md
cctl/power_electronics_objects/: readme.md  readme_cn.md
core/: readme.md  readme_cn.md
core/dev/: at_device.h  datalink.h  interface.h  mem_presp.h  peripheral_port.h  pil_core.h  readme.md  ring_buf.h  tunable.h
core/dev/RTC/: ds1337.c  ds1337.h
core/dev/application/: ad9834.c  ad9834.h
core/dev/can/: can.h  can_hook.h  gmp_can_service.c
core/dev/dac/: dac8563.c  dac8563.h
core/dev/display/: ht16k33.c  ht16k33.h
core/dev/encoder/: as5048a.h
core/dev/excitation/: ad9833.h
core/dev/gpio/: pca9555.h
core/dev/gpio_ext/: pca9555.h
core/dev/meter/: ina219.h
core/dev/sensor/: hdc1080.c
core/dev/source/: ad9833.c  ad9833.h
core/dev/src/: gmp_datalink.c  gmp_pil_core.c  gmp_tunable.c  pil_core.c
core/pm/: function_player.h  function_scheduler.h
core/src/: gmp_at_device.c  gmp_dev_util.c  gmp_process_mgr.c
core/std/: gmp.std.h  gmp_cport.h
core/std/cc/: cc.armcc.inl  cc.c2000.inl  cc.default.inl  cc.gnuc.inl
core/std/checksum/: crc16.h
core/std/ec/: error_code.detals.inl
core/std/src/: crc16.c
csp/: readme.md  readme_cn.md
csp/c28x_syscfg/: c28x_peripheral_driver.h  csp.general.h  csp.typedef.h
csp/c28x_syscfg/f280049c_demo/: .gitignore
csp/c28x_syscfg/f28p55_demo/: .gitignore
csp/c28x_syscfg/iris_280039c_board/: .cproject  F280039_Iris_node.syscfg
csp/c28x_syscfg/src/: peripheral_driver.c  sysconfig_adapter.c
csp/rpi_pico/: CMakeLists.txt  README.md  csp.config.h  csp.general.h  csp.general.hpp  csp.typedef.h
csp/rpi_pico/example/pico_gmp_demo/: CMakeLists.txt  README.md  main.c  xplt.config.h
csp/rpi_pico/example/pico_gmp_demo/gmp_pico_src/: gmp_config.cmake
csp/rpi_pico/example/pico_gmp_demo/gmp_pico_src/gmp_src_mgr/: gmp_config.cmake  gmp_framework_config.json
csp/rpi_pico/example/pico_gmp_demo/gmp_pico_src/user/: ctl_main.c  ctl_main.h  user_main.c  user_main.h
csp/rpi_pico/example/pico_gmp_demo/gmp_pico_src/xplt/: xplt.config.h  xplt.ctl_interface.h  xplt.peripheral.c  xplt.peripheral.h
csp/rpi_pico/src/: rpi_pico_common.c  rpi_pico_peripheral.c
csp/stm32/: csp.general.h
csp/stm32/common/: peripheral_model.stm32.h
csp/stm32/src/: stm32_chip_common.c  stm32_peripheral_driver.c
csp/stm32/stm32c092rc_nucleo_peripheral/: stm32c092rc.ioc
csp/windows_simulink/: GMPCorePropertySheet.props  csp.config.h
csp/windows_simulink/src/: windows_can_driver.cpp  windows_peripheral_driver.cpp  windows_simulink_main.cpp
csp/zynq7/: csp.config.h
ctl/: doxyfile.config  generate_doxygen.bat  readme.md  readme_cn.md
ctl/component/: COMPONENT_DEVELOPMENT_SPEC.md  COMPONENT_MODULE_CATALOG.md  intrinsic.h  motor_control.h  readme.md  readme_cn.md
ctl/component/digital_power/: readme.md  readme_cn.md
ctl/component/dsa/: dsa_scope.h  dsa_trigger.h  readme.md  (+2 more)
ctl/framework/: cia402_state_,machine.h  cia402_state_machine.h  ctl_nano.h  readme_cn.md  structure.md
ctl/hardware_preset/: gmp_sdpe_generate_all.bat
ctl/math_block/: gmp_math.h
ctl/suite/: Directory.Build.props  Directory.Build.targets  readme.md  readme_cn.md
ctl/suite/mcs_pmsm/project/motor_control_simulink/: CMakeLists.txt  Directory.Build.props  README.md  compilation_debug_notes.md  gmp_pmsm_sensored_sil_mdl.slx  gmp_pmsm_sensored_sil_mdl_2022b.slx  gmp_pmsm_sensored_sil_mdl_2025b.slx  motor_control_simulink.code-workspace  motor_control_simulink.vcxproj  motor_control_simulink.vcxproj.filters  network.json  vcpkg.json
ctl/suite/mcs_pmsm/project/motor_control_simulink/rt_trace/: rt_trace_layout.json
ctl/training/: readme.md
manual/: README.md  README_CN.md
quick_start/: readme.md  readme_cn.md
slib/: install_gmp_simulink_lib.m  readme.md  readme_cn.md  reg_path_gmp_simulink_lib.m  uninstall_gmp_simulink_lib.m
slib/simulink_lib_src/: gmp_component_model_src.slx  gmp_fp_utilities_src.slx
tools/SDPE/: SDPE (软件定义电力电子) 配置工具项目开发书.md  build_all.py  inst_shunt_test.h  inst_volt_div_800V.h  readme.md  req_pmsm_foc.json  sdpe_cli.py  sdpe_compile_component_dbg.py
tools/SDPE_v2/: DATA_FORMAT.md  README.md  README_CN.md  distribute_sdpe_mgr.py  gmp_sdpe_deploy_project_mgr.bat  gmp_sdpe_element_gui.bat  gmp_sdpe_generate_all.bat  gmp_sdpe_gui.bat  gmp_sdpe_project_gui.bat  project_context.py  sdpe.py  sdpe_settings.json
tools/facilities_generator/: development_notes.md  readme.md  readme_cn.md
tools/gmp_installer/: README.md  README_CN.md  activate_env.bat  audit_env_guards.py  configure_private_proxy.bat  configure_proxy.bat  deploy_portable.bat  distribute_project_gitignores.py  ensure_gmp_environment.bat  environment_manager.py  environment_manifest.json  install_online.bat  install_system.bat  launch_visual_studio.bat  readme.txt  register_gmp_root.bat  requirements-gmp.txt  scoop_installer.bat
tools/gmp_pil_server/: ti_dbg_server_XDS110_mt.js
tools/gmp_sil/: readme.md  readme_cn.md
tools/matlab_component_builder/: .gitignore  README.md  README_CN.md  matlab_component_builder.py  run_builder.bat  run_python.bat
tools/peripheral_router/: .gitignore  README.md  WINDOWS_CSP.md  run_service.bat  run_ui.bat
tools/peripheral_router/firmware/pico/: CMakeLists.txt  README.md
tools/peripheral_router/firmware/pico/src/: main.c
tools/peripheral_router/host/: pyproject.toml
tools/peripheral_router/host/gmp_router/: __init__.py  can.py  client.py  device.py  discovery.py  protocol.py  service.py  transport.py
tools/peripheral_router/host/tests/: test_can.py  test_device.py  test_protocol.py
tools/peripheral_simulator/: readme.md  readme_cn.md
vcore/: readme.md  readme_cn.md
(+1445 files in other folders)
